# trufflehog-github-actions-example

./: .pre-commit-config.yaml  README.md  pyproject.toml  s3.py
.github/workflows/: test.yml
